--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bibimbap.html">Bibimbap</a>
+    <ul>
+        <li><a href="recipes/bibimbap.html">Bibimbap</a></li>
+        <li><a href="recipes/turkey_chili.html">Pumpkin Turkey Chili</a></li>
+        <li><a href="recipes/"></a></li>
+    </ul>
 </body>
 </html>
