turkey_chili.html updated

--- a/recipes/turkey_chili.html
+++ b/recipes/turkey_chili.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pumpkin Turkey Chili</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" height="350">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" width="350">
     <h2>Description</h2>
     <p>This turkey pumpkin chili is absolutely delicious. It's quick and easy, too!</p>
     <h3>Ingredients</h3>
@@ -32,5 +32,6 @@
         <li>Mix in tomatoes and pumpkin. Season with chili powder, pepper, and salt. Reduce heat to low, cover, and simmer 15 to 20 minutes. Serve topped with Cheddar cheese and sour cream.</li>
         <img src="https://www.allrecipes.com/thmb/TI01bglHbTDOqgLLwBrdNt7_guU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/270553-pumpkin-turkey-chili-Darcey55-1x1-1-206dbb134bcf4e7e8f903144d7a9497f.jpg" alt="Pumpkin Turkey Chili" height="250">
     </ol>
+    <p><a href="../index.html">Back to Recipes</a></p>
 </body>
 </html>
