bibimbap.html updated

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bibimbap</h1>
     <h1>Korean Rice With Mixed Vegetables</h1>
-    <img src="https://www.allrecipes.com/thmb/5Zx-fq1l7hiwQDPBLArguNmsahk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-6033d57010ea4dd3bd7b95fb36d3dd51.jpg" height="350" alt="Bibimbap Photo">
+    <img src="https://www.allrecipes.com/thmb/5Zx-fq1l7hiwQDPBLArguNmsahk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-6033d57010ea4dd3bd7b95fb36d3dd51.jpg" width="400" alt="Bibimbap Photo">
     <h2>Description</h2>
     <p>This bibimbap recipe makes a popular and delicious Korean meal. Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.</p>
     <h3>Ingredients</h3>
@@ -43,5 +43,6 @@
         <li>Divide cooked rice into 4 large serving bowls; top with spinach mixture, a few pieces of beef, and cucumber mixture. Place 1 egg atop each serving. Drizzle each bowl with 1 teaspoon sesame oil, a sprinkle of sesame seeds, and a small amount of gochujang paste if desired.</li>
         <img src="https://www.allrecipes.com/thmb/qK_4-b4KkWEcUw44nprldp7mkuo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-70784fdd28904e2daab245c029f978ee.jpg" alt="Photo of the finished dish" height="250">
     </ol>
+    <p><a href="../index.html">Back to Recipes</a></p>
 </body>
 </html>
