--- a/recipes/planked_salmon.html
+++ b/recipes/planked_salmon.html
@@ -6,6 +6,32 @@
     <title>Cedar Planked Salmon</title>
 </head>
 <body>
-    
+    <h1>Cedar Planked Salmon</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F3397083cc9b45a51fca01788be995182%2F166043297520220813_180223.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Cedar Planked Salmon" height="350">
+    <h2>Description</h2>
+    <p>This cedar plank salmon is a dish my brother prepared for me in Seattle. It is by far the best salmon I've ever eaten. I like to serve it with an Asian-inspired rice and roasted asparagus.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 (12 inch) untreated cedar planks</li>
+        <li><sup>1</sup>/<sub>3</sub> cup soy sauce</li>
+        <li><sup>1</sup>/<sub>3</sub> cup vegetable oil</li>
+        <li>1 <sup>1</sup>/<sub>2</sub> tablespoons rice vinegar</li>
+        <li>1 teaspoon sesame oil</li>
+        <li><sup>1</sup>/<sub>4</sub> cup chopped green onions</li>
+        <li>1 tablespoon grated fresh ginger</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>2 (2 pound) salmon fillets, skin removed</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Soak cedar planks for at least 1 hour in warm water. Soak longer if you have time.</li>
+        <li>Stir soy sauce, vegetable oil, rice vinegar, sesame oil, green onions, ginger, and garlic together in a shallow dish.</li>
+        <li>Place salmon fillets in soy mixture and turn to coat. Cover and marinate for at least 15 minutes, or up to 1 hour refrigerated.</li>
+        <li>Preheat an outdoor grill for medium heat. Place planks on the grill grate. Heat planks until they start to smoke and crackle just a little.</li>
+        <li>Remove salmon from marinade and place on planks; discard marinade.</li>
+        <li>Close grill cover. Grill salmon until it flakes easily with a fork, about 20 minutes; salmon will continue to cook after you remove it from the grill.</li>
+        <img src="https://www.allrecipes.com/thmb/PFIaZwtUxGfQrm16RME8-Hgk_CY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2609651-69d39f7933624bf3bdaf76383578e3f8.jpg" alt="Cedar Planked Salmon" height="250">
+    </ol>
+    <p><a href="../index.html">Back to Recipes</a></p>
 </body>
 </html>
