--- a/recipes/turkey_chili.html
+++ b/recipes/turkey_chili.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pumpkin Turkey Chili</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" width="350">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" height="350">
     <h2>Description</h2>
     <p>This turkey pumpkin chili is absolutely delicious. It's quick and easy, too!</p>
     <h3>Ingredients</h3>
