--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/bibimbap.html">Bibimbap</a></li>
         <li><a href="recipes/turkey_chili.html">Pumpkin Turkey Chili</a></li>
-        <li><a href="recipes/"></a></li>
+        <li><a href="recipes/planked_salmon.html">Cedar Planked Salmon</a></li>
     </ul>
 </body>
 </html>
