--- a/recipes/turkey_chili.html
+++ b/recipes/turkey_chili.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pumpkin Turkey Chili</title>
 </head>
 <body>
     <h1>Pumpkin Turkey Chili</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" height="350">
+    <img class="first-img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Pumpkin Turkey Chili" height="350">
     <h2>Description</h2>
     <p>This turkey pumpkin chili is absolutely delicious. It's quick and easy, too!</p>
     <h3>Ingredients</h3>
