--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/bibimbap.html">Bibimbap</a></li>
-        <li><a href="recipes/turkey_chili.html">Pumpkin Turkey Chili</a></li>
-        <li><a href="recipes/planked_salmon.html">Cedar Planked Salmon</a></li>
-    </ul>
+    <div class="novigator">
+        <ul>
+            <li><a href="recipes/bibimbap.html">Bibimbap</a></li>
+            <li><a href="recipes/turkey_chili.html">Pumpkin Turkey Chili</a></li>
+            <li><a href="recipes/planked_salmon.html">Cedar Planked Salmon</a></li>
+        </ul>
+    </div>
 </body>
 </html>
