--- a/recipes/planked_salmon.html
+++ b/recipes/planked_salmon.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Cedar Planked Salmon</title>
 </head>
 <body>
     <h1>Cedar Planked Salmon</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F3397083cc9b45a51fca01788be995182%2F166043297520220813_180223.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Cedar Planked Salmon" height="350">
+    <img class="first-img" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F3397083cc9b45a51fca01788be995182%2F166043297520220813_180223.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Cedar Planked Salmon" height="350">
     <h2>Description</h2>
     <p>This cedar plank salmon is a dish my brother prepared for me in Seattle. It is by far the best salmon I've ever eaten. I like to serve it with an Asian-inspired rice and roasted asparagus.</p>
     <h3>Ingredients</h3>
