--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -44,6 +44,6 @@
         <li>Divide cooked rice into 4 large serving bowls; top with spinach mixture, a few pieces of beef, and cucumber mixture. Place 1 egg atop each serving. Drizzle each bowl with 1 teaspoon sesame oil, a sprinkle of sesame seeds, and a small amount of gochujang paste if desired.</li>
         <img src="https://www.allrecipes.com/thmb/qK_4-b4KkWEcUw44nprldp7mkuo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-70784fdd28904e2daab245c029f978ee.jpg" alt="Photo of the finished dish" height="250">
     </ol>
-    <p><a href="../index.html">Back to Recipes</a></p>
+    <div class="link"><button><a href="../index.html">Back to Recipes</a></button></div>
 </body>
 </html>
