--- a/recipes/planked_salmon.html
+++ b/recipes/planked_salmon.html
@@ -33,6 +33,6 @@
         <li>Close grill cover. Grill salmon until it flakes easily with a fork, about 20 minutes; salmon will continue to cook after you remove it from the grill.</li>
         <img src="https://www.allrecipes.com/thmb/PFIaZwtUxGfQrm16RME8-Hgk_CY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2609651-69d39f7933624bf3bdaf76383578e3f8.jpg" alt="Cedar Planked Salmon" height="250">
     </ol>
-    <p><a href="../index.html">Back to Recipes</a></p>
+    <div class="link"><button><a href="../index.html">Back to Recipes</a></button></div>
 </body>
 </html>
