--- a/recipes/turkey_chili.html
+++ b/recipes/turkey_chili.html
@@ -33,6 +33,6 @@
         <li>Mix in tomatoes and pumpkin. Season with chili powder, pepper, and salt. Reduce heat to low, cover, and simmer 15 to 20 minutes. Serve topped with Cheddar cheese and sour cream.</li>
         <img src="https://www.allrecipes.com/thmb/TI01bglHbTDOqgLLwBrdNt7_guU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/270553-pumpkin-turkey-chili-Darcey55-1x1-1-206dbb134bcf4e7e8f903144d7a9497f.jpg" alt="Pumpkin Turkey Chili" height="250">
     </ol>
-    <p><a href="../index.html">Back to Recipes</a></p>
+    <div class="link"><button><a href="../index.html">Back to Recipes</a></button></div class="link">
 </body>
 </html>
