index.html updated

--- a/index.html
+++ b/index.html
@@ -3,17 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <div class="novigator">
-        <ul>
-            <li><a href="recipes/bibimbap.html">Bibimbap</a></li>
-            <li><a href="recipes/turkey_chili.html">Pumpkin Turkey Chili</a></li>
-            <li><a href="recipes/planked_salmon.html">Cedar Planked Salmon</a></li>
-        </ul>
+    <div class="index">
+        <h1>Odin Recipes</h1>
+        <div class="cards">
+            <div class="card">
+                <h2>Bibimbap</h2>
+                <a href="recipes/bibimbap.html">
+                    <img src="https://www.allrecipes.com/thmb/5Zx-fq1l7hiwQDPBLArguNmsahk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-6033d57010ea4dd3bd7b95fb36d3dd51.jpg"
+                            alt="Bibimbap photo"
+                            width="240px"
+                            height="280px" />
+                </a>
+                <div class="text">This bibimbap recipe makes a popular and 
+                    delicious Korean meal.
+                </div>
+            </div>
+
+            <div class="card">
+                <h2>Pumpkin Turkey Chili</h2>
+                <a href="recipes/turkey_chili.html">
+                    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4568800.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+                            alt="Pumpkin Turkey Chili"
+                            width="240px"
+                            height="280px" />
+                </a>
+                <div class="text">This turkey pumpkin chili is absolutely delicious.
+                    It's quick and easy, too!
+                </div>
+            </div>
+
+            <div class="card">
+                <h2>Cedar Planked Salmon</h2>
+                <a href="recipes/planked_salmon.html">
+                    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F3397083cc9b45a51fca01788be995182%2F166043297520220813_180223.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+                            alt="Cedar Planked Salmon"
+                            width="240px"
+                            height="280px" />
+                </a>
+                <div class="text">This cedar plank salmon is a dish my brother 
+                    prepared for me in Seattle.
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p><a href="https://www.linkedin.com/in/rostyslav-putnikov-76484926a/">&copy Rostyslav-Coder</a></p>
+        </div>
     </div>
 </body>
 </html>
