--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -3,47 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Bibimbap</title>
 </head>
 <body>
-    <h1>Bibimbap</h1>
-    <h1>Korean Rice With Mixed Vegetables</h1>
-    <img class="first-img" src="https://www.allrecipes.com/thmb/5Zx-fq1l7hiwQDPBLArguNmsahk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-6033d57010ea4dd3bd7b95fb36d3dd51.jpg" height="350" alt="Bibimbap Photo">
-    <h2>Description</h2>
-    <p>This bibimbap recipe makes a popular and delicious Korean meal. Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 English cucumber, cut into matchsticks</li>
-        <li><sup>1</sup>/<sub>4</sub> cup gochujang (Korean hot pepper paste) (Optional)</li>
-        <li>1 bunch fresh spinach, cut into thin strips</li>
-        <li>1 tablespoon soy sauce</li>
-        <li>2 teaspoons olive oil, divided</li>
-        <li>2 carrots, cut into matchsticks</li>
-        <li>1 clove garlic, minced</li>
-        <li>1 pinch red pepper flakes</li>
-        <li>1 pound thinly-sliced beef top round steak</li>
-        <li>4 large eggs</li>
-        <li>4 cups cooked white rice</li>
-        <li>4 teaspoons toasted sesame oil, divided</li>
-        <li>1 teaspoon sesame seeds</li>
-        <li>2 teaspoons gochujang (Korean hot pepper paste), divided (Optional)</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Stir together cucumber pieces and gochujang paste in a bowl; set aside.</li>
-        <li>Bring about 2 cups water to a boil in a large nonstick skillet and stir in spinach; cook until bright green and wilted, 2 to 3 minutes.</li>
-        <img src="https://www.allrecipes.com/thmb/yy7K0yxvssSnvG7l3dd89OQxYZ0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-Step2-0657-025c3da0ac564f53be15dd604f80711d.jpg" alt="Fried greens in a frying pan" height="250">
-        <li>Drain spinach and squeeze out as much moisture as possible; set spinach aside in a bowl and stir in soy sauce.</li>
-        <li>Heat 1 teaspoon olive oil in a large nonstick skillet; cook and stir carrots until softened, about 3 minutes.</li>
-        <img src="https://www.allrecipes.com/thmb/EI1fjUWvtIbsOL09VsvCdMe7GZo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-Step3-0659-4e6159be14104f6aabe5a3a391127cc5.jpg" alt="Fried carrots in a frying pan" height="250">
-        <li>Stir in garlic and cook just until fragrant, about 1 minute. Stir in cucumber mixture; sprinkle with red pepper flakes. Set carrot mixture aside in a bowl.</li>
-        <li>Brown beef in a clean nonstick skillet over medium heat, about 5 minutes per side; set aside.</li>
-        <img src="https://www.allrecipes.com/thmb/gB1XA3o4ePB-x7j1c2UxnJaAwJ4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-Step4-0660-521fb0aaaaf54a2089fe21e04c336164.jpg" alt="Fried beef in a frying pan" height="250">
-        <li>Heat remaining 1 teaspoon olive oil in another nonstick skillet over medium-low heat. Fry eggs just on one side until yolks are runny, but whites are firm, 2 to 4 minutes.</li>
-        <li>Divide cooked rice into 4 large serving bowls; top with spinach mixture, a few pieces of beef, and cucumber mixture. Place 1 egg atop each serving. Drizzle each bowl with 1 teaspoon sesame oil, a sprinkle of sesame seeds, and a small amount of gochujang paste if desired.</li>
-        <img src="https://www.allrecipes.com/thmb/qK_4-b4KkWEcUw44nprldp7mkuo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-70784fdd28904e2daab245c029f978ee.jpg" alt="Photo of the finished dish" height="250">
-    </ol>
-    <div class="link"><button><a href="../index.html">Back to Recipes</a></button></div>
+    <div class="header">
+        <ul>
+            <li><a href="#recipe">Home</a></li>
+            <li><a href="#desc">Description</a></li>
+            <li><a href="#ingred">Ingredients</a></li>
+            <li><a href="#steps">Steps</a></li>
+            <li><a href="../index.html">Back</a></li>
+        </ul>
+    </div>
+    <div class="recipe" id="recipe">
+        <div class="logo">
+            <h1>Bibimbap</h1>
+            <h2>Korean Rice With Mixed Vegetables</h2>
+        </div>
+        <div class="duble-col">
+            <div class="image">
+                <img src="https://www.allrecipes.com/thmb/5Zx-fq1l7hiwQDPBLArguNmsahk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228240-BibimbapKoreanRiceWithMixedVegtables-ddmfs-4X3-0667-6033d57010ea4dd3bd7b95fb36d3dd51.jpg" height="350" alt="Bibimbap Photo" />
+            </div>
+            <div class="right">
+                <div class="desc" id="desc">
+                    <h2>Description</h2>
+                    <p>This bibimbap recipe makes a popular and delicious Korean meal. Meaning mixed rice, bibimbap is a delicious rice bowl topped with vegetables, beef, a whole egg, and gochujang (red chili pepper paste). Traditionally, bibimbap was eaten on the eve of the Lunar New Year, to use up any leftovers before the start of the new year.</p>
+                </div>
+                <div class="ingred" id="ingred">
+                    <h2>Ingredients</h2>
+                    <ul>
+                        <li>1 English cucumber, cut into matchsticks</li>
+                        <li><sup>1</sup>/<sub>4</sub> cup gochujang (Korean hot pepper paste) (Optional)</li>
+                        <li>1 bunch fresh spinach, cut into thin strips</li>
+                        <li>1 tablespoon soy sauce</li>
+                        <li>2 teaspoons olive oil, divided</li>
+                        <li>2 carrots, cut into matchsticks</li>
+                        <li>1 clove garlic, minced</li>
+                        <li>1 pinch red pepper flakes</li>
+                        <li>1 pound thinly-sliced beef top round steak</li>
+                        <li>4 large eggs</li>
+                        <li>4 cups cooked white rice</li>
+                        <li>4 teaspoons toasted sesame oil, divided</li>
+                        <li>1 teaspoon sesame seeds</li>
+                        <li>2 teaspoons gochujang (Korean hot pepper paste), divided (Optional)</li>
+                    </ul>
+                </div>
+            </div>    
+        </div>
+        <div class="steps" id="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Stir together cucumber pieces and gochujang paste in a bowl; set aside.</li>
+                <li>Bring about 2 cups water to a boil in a large nonstick skillet and stir in spinach; cook until bright green and wilted, 2 to 3 minutes.</li>
+                <li>Drain spinach and squeeze out as much moisture as possible; set spinach aside in a bowl and stir in soy sauce.</li>
+                <li>Heat 1 teaspoon olive oil in a large nonstick skillet; cook and stir carrots until softened, about 3 minutes.</li>
+                <li>Stir in garlic and cook just until fragrant, about 1 minute. Stir in cucumber mixture; sprinkle with red pepper flakes. Set carrot mixture aside in a bowl.</li>
+                <li>Brown beef in a clean nonstick skillet over medium heat, about 5 minutes per side; set aside.</li>
+                <li>Heat remaining 1 teaspoon olive oil in another nonstick skillet over medium-low heat. Fry eggs just on one side until yolks are runny, but whites are firm, 2 to 4 minutes.</li>
+                <li>Divide cooked rice into 4 large serving bowls; top with spinach mixture, a few pieces of beef, and cucumber mixture. Place 1 egg atop each serving. Drizzle each bowl with 1 teaspoon sesame oil, a sprinkle of sesame seeds, and a small amount of gochujang paste if desired.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
